Add some DivineMC patch